--- a/get_data/get_animation.ipynb
+++ b/get_data/get_animation.ipynb
@@ -5,7 +5,7 @@
    "id": "d731ffc5",
    "metadata": {},
    "source": [
-    "# 📌 애니메이션 목록 불러오기"
+    "# 📌 애니메이션 목록 저장"
    ]
   },
   {
@@ -20,6 +20,14 @@
     "import pymongo\n",
     "import requests\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4efb58d",
+   "metadata": {},
+   "source": [
+    "### ✏️ 애니메이션 정보 가져오기"
    ]
   },
   {
@@ -73,6 +81,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aad56b5b",
+   "metadata": {},
+   "source": [
+    "### ✏️ 애니메이션 정보 저장"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "afa9636b",
@@ -82,22 +98,23 @@
     "# 애니메이션 정보 DB에 저장\n",
     "def save_animation(data):\n",
     "        \n",
-    "  # 환경변수 불러오기\n",
-    "  dotenv.load_dotenv(dotenv.find_dotenv())\n",
-    "  user = os.environ[\"MONGODB_USER\"] # MongoDB user\n",
-    "  password = os.environ[\"MONGODB_PW\"] # MongoDB password\n",
+    "    # 환경변수 불러오기\n",
+    "    dotenv.load_dotenv(dotenv.find_dotenv())\n",
+    "    USER = os.environ[\"MONGODB_USER\"] # MongoDB user\n",
+    "    PASSWORD = os.environ[\"MONGODB_PW\"] # MongoDB password\n",
+    "    PORT = int(os.environ[\"MONGODB_PORT\"]) # MongoDB port\n",
     "    \n",
-    "  # DB 연결\n",
-    "  conn = pymongo.MongoClient(\"localhost\", 27017)\n",
-    "#   conn = pymongo.MongoClient(\"mongodb://\" + user + \":\" + password + \"@j7e104.p.ssafy.io\", 27017)\n",
-    "  db = conn.test\n",
-    "  dbcol_ani = db.animation\n",
+    "    # DB 연결\n",
+    "    #   conn = pymongo.MongoClient()\n",
+    "    conn = pymongo.MongoClient(\"mongodb://\" + USER + \":\" + PASSWORD + \"@j7e104.p.ssafy.io\", PORT)\n",
+    "    db = conn.test\n",
+    "    dbcol_ani = db.animation\n",
     "  \n",
     "  # data: [[20개의 애니상세목록], [20개의 애니상세 목록]...]\n",
-    "  for unit in data: # unit: 20개의 애니 상세 목록\n",
-    "    for u in unit: # u: 애니 상세 정보\n",
-    "#       dbcol_ani.insert_one(u) # DB에 삽입\n",
-    "      dbcol_ani.update_one({\"id\": u[\"id\"]}, {\"$set\": u }, upsert = True) # 있으면 수정, 없으면 삽입\n",
+    "    for unit in data: # unit: 20개의 애니 상세 목록\n",
+    "        for u in unit: # u: 애니 상세 정보\n",
+    "#             dbcol_ani.insert_one(u) # DB에 삽입\n",
+    "            dbcol_ani.update_one({\"id\": u[\"id\"]}, {\"$set\": u }, upsert = True) # 있으면 수정, 없으면 삽입\n",
     "\n",
     "save_animation(ani_list)\n",
     "\n",
@@ -107,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -122,6 +139,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "eebaf1173d8d9c3c4ee9a7b8bb1432a7f576348d6cb7a26bc263375fbc310797"
+   }
   }
  },
  "nbformat": 4,
